2002-05-20 Araki Ken <arakiken@users.sf.net>

	* VPATH was wrong in mlterm/Makefile.in xwindow/Makefile.in. fixed.
	  (Thanks to Nakada Nobuyoshi san)

2002-05-19 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_color.c: alloc_closest_xcolor_pseudo() doesn't free the memory space
	  pointed to by all_colors. fixed.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* auto pointer was passed to putenv(). fixed.
	  (Thanks to Nakada Nobuyoshi san)

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* display name specified by --display overwrites DISPLAY environment variable.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* combining characters were not shown with both -bi and -m options. fixed.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* Unicode characters except 0x00-0x7f could be shown incorrectly. fixed.

2002-05-19 Tomohiro KUBOTA <kubota@debian.org>

	* manpage update: explanations for -H, -J, -Q, -Z, and -q are
	  vastly modified.  Added a chapter of DAEMON MODE.  Keys which
	  are available only in -q mode are noted.
	* Added a new manpage of mlclient.1 .  (man/Makefile.in is also
	  modified to install this new page.)

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* DEC_SPECIAL characters were not shown with -Y,--decsp option. fixed.
	  (Thanks to Kubota Tomohiro san)
	* "RRRRR-BBBBB-GGGG;" style is accepted in color config file for backward
	  compatiblity with 2.4.0 or before.
	  (Thanks to Nanashi san)

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* a bug of shaping arabic combining characters is fixed.
	* scrollbar's height was incorrect when screen was revived. fixed.

2002-05-18 Araki Ken <arakiken@users.sf.net>

	* compilation failed if ./configure is done with --disable-shared. fixed.
	  (Thanks to Nadim Shaikli)

2002-05-17 Araki Ken <arakiken@users.sf.net>

	* kik_pty_streams.c is improved.
	  (Thanks to Nadim Shaikli)
	* When base direction is changed from RTL to LTR, garbage is left in screen. fixed.
	  (Thanks to Nadim Shaikli)
