@@ -1,3 +1,7 @@
+2002-05-26 Tomohiro KUBOTA <kubota@debian.org>
+
+	* rewrite help message ("mlterm --help").
+
 2002-05-20 Araki Ken <arakiken@users.sf.net>
 
 	* VPATH was wrong in mlterm/Makefile.in xwindow/Makefile.in. fixed.
